--- a/newsApp/src/index.css
+++ b/newsApp/src/index.css
@@ -7,7 +7,7 @@
   body
   {
     background-color: #222;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: azure;
 
   }
